# test-saml-idp

./: .gitignore  Dockerfile  LICENSE  README.md  fmt.sh  lint.sh  main.py  pyproject.toml  test.sh
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: build.yml  publish-docker.yml  python-app.yml
saml_idp/: config.py  dependencies.py  metadata.py  router.py
saml_idp/models/: __init__.py  logout_response.py
saml_idp/templates/: login.html  main.html
src/saml_idp/: __init__.py  config.py  dependencies.py  router.py  urls.py  utils.py
src/saml_idp/models/: __init__.py  authn_request.py  authn_response.py  logout_request.py  metadata.py
src/saml_idp/templates/: base.html  login.html  metadata.xml  redir.html
src/test_saml_idp/: __init__.py
tests/: conftest.py  test_config.py  test_router.py  test_urls.py  test_utils.py
tests/files/: metadata.crt  metadata.key
tests/models/: test_authn_request.py  test_authn_response.py  test_logout_request.py  test_logout_response.py
tests/schema/: saml-schema-metadata-2.0.xsd
